fix: [COACH-1859] Fix HC editor selections clipping (#11318)

--- a/apps/helpdesk/src/pages/aiAgent/components/KnowledgeEditor/KnowledgeEditorHelpCenterArticle/KnowledgeEditorHelpCenterArticleEditView.less
+++ b/apps/helpdesk/src/pages/aiAgent/components/KnowledgeEditor/KnowledgeEditorHelpCenterArticle/KnowledgeEditorHelpCenterArticleEditView.less
@@ -1,6 +1,8 @@
 :local {
     .container {
         width: 100%;
+        height: 100%;
+        overflow-x: auto;
     }
 
     .editor {
@@ -9,8 +11,7 @@
                 border: none;
                 background-color: var(--elevation-neutral-mid) !important;
                 color: var(--content-neutral-default) !important;
-                overflow-x: auto !important;
-                overflow-y: hidden !important;
+                overflow: visible !important;
                 display: flex !important;
                 flex-wrap: nowrap !important;
             }
